Fixes incorrect Yakuake height handling on dualhead setups.

BUG:310155